2004-12-21  Paul N. Hilfinger  <hilfingr@otisco.mckusick.com>

	* ada-lang.c (ada_print_subexp): Remove i18n markup from Ada code
	output.
	* ada-typeprint.c (ada_typedef_print): Ditto.
	(print_unchecked_union_type): Ditto.
	(print_record_type): Ditto, and correct output for non-derived
	types that was inadvertently left off during the markup.

2004-12-19  Mark Kettenis  <kettenis@gnu.org>

	* hppa-hpux-tdep.c (hppa64_hpux_search_dummy_call_sequence): Check
	whether the name returned by find_pc_partial_function is a null
	pointer, not whether it is an empty string.

	* hppa-tdep.h (hppa_regnum): Add HPPA_DP_REGNUM, HPPA_RET0_REGNUM,
	HPPA_RET1_REGNUM and HPPA64_FP4_REGNUM.
	* hppa-tdep.c (hppa64_integral_or_pointer_p)
	(hppa64_floating_p) New functions.
	(hppa64_push_dummy_call): Re-implement.
	(hppa32_register_type): Rename argument reg_nr to regnum.
	(hppa64_register_type): Likewise.  Use HPPA64_FP4_REGNUM instead
	of HPPA_FP4_REGNUM.
	(hppa32_cannot_store_register): Renamed from
	hppa_cannot_store_register.
	(hppa64_cannot_store_register): New function.
	(hppa_gdbarch_init): Set cannot_store_register and
	cannot_fetch_register to hppa32_cannot_store_register or
	hppa64_cannot_store_register when appropriate.

2004-12-18  Mark Kettenis  <kettenis@gnu.org>

	* hppah-nat.c: Remove file.
	* infttrace.h: Remove file.
	* infttrace.c: Remove file.
	* Makefile.in (ALLDEPFILES): Remove hppah-nat.c
	(infttrace_h): Remove variable.
	(hppah-nat.o, infttrace.o): Remove dependencies.
	* configure.host (hppa*64*-*-hpux11*): Remove.
	* config/pa/hpux11w.mh: Remove file.
	* config/pa/nm-hppah.h: Remove file.
	* config/pa/nm-hppah11.h: Remove file.

	* config/djgpp/fnchange.lst: Resolve name clash between
	../bfd/elf32-arm.c and ../bfd/elf32-arc.c, i386-sol2-nat.c and
	i386-sol2-tdep.c, mips64obsd-nat.c and mips64obsd-tdep.c,
	testsuite/gdb.base/bitfields.c and
	testsuite/gdb.base/bitfields2.c, testsuite/gdb.base/bitfields.exp